src/styles.css
/* You can add global styles to this file, and also import other style files */

@import 'tailwindcss';

@theme {
    --color-primary: #e1aa74;
    --color-bg: #ffdbb7;
    --color-secondary: #ffce9d;
    --color-accent: #ffc388;
    --color-text: black;
    --color-danger: #fb2c36;
}

@media (prefers-color-scheme: dark) {
    :root {
        --color-primary: #50277c;
        --color-bg: #05000c;
        --color-secondary: #100a1c;
        --color-accent: #a048ff;
        --color-text: #fbe8ff;
        --color-danger: #fb2c36;
    }
}

@layer base {
    body {
        @apply bg-bg;
    }
}

@layer components {
    * {
        color: var(--color-text);
    }

    input {
        @apply bg-secondary p-1;
    }

    a {
        @apply bg-primary px-1 hover:bg-accent hover:underline transition-colors duration-100;
    }

    button {
        @apply bg-primary px-4 py-2 rounded  hover:bg-accent hover:underline transition-colors duration-100 cursor-pointer;
    }

    h1 {
        @apply text-xl;
    }
}

